new list in index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, nemo?</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos doloribus odio cum dolor fugiat nostrum, facilis reprehenderit illum incidunt sunt dicta sint neque quis voluptatem qui nulla, eum eaque explicabo odit at officia quibusdam quo quos autem! Inventore quidem dolorem omnis nemo totam, unde vitae veniam nesciunt earum aperiam quaerat maiores ducimus! Nemo repudiandae vero, saepe iste iure repellat praesentium ratione. Porro facere laudantium vitae harum quae pariatur dolor natus iste labore aliquam molestias sint delectus fugiat facilis nemo illum qui itaque, officiis quaerat odit. Natus doloremque iste, mollitia asperiores totam fugit qui ipsa placeat, odit possimus consequatur facere consectetur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, voluptates molestias! Quod explicabo ad doloremque autem accusamus optio, nostrum fugit, nulla voluptatibus atque sed, consequuntur consequatur. Vel iure natus vitae.</p>
+    <ul>
+        <li>Hello</li>
+        <li>World</li>
+    </ul>
 </body>
 </html>
